--- a/src/ArticleList/ArticleList.module.css
+++ b/src/ArticleList/ArticleList.module.css
@@ -2,8 +2,10 @@
   list-style-type: none;
   border: 1px dashed;
   width: 42%;
-  background-color: gray;
-  padding-left: 30px;
+  background-color: #A9A9A9;
+  padding-left: 20px;
   margin-left: auto;
   margin-right: auto;
+  border-radius: 0.5em;
+  padding-bottom: 20px;
 }
