--- a/src/ArticleList/ArticleListItem.module.css
+++ b/src/ArticleList/ArticleListItem.module.css
@@ -1,8 +1,9 @@
 .article_list_item {
   border: 1px solid red;
-  margin: 30px 20px 0px 0px;
-  width: 95%;
-  background-color: #EEEBEB;
+  margin: 20px 20px 0px 0px;
+  border-radius: 0.5em;
+  background-image: linear-gradient(90deg, #CC0000 -50% , #F1F1F1 11%);
+  box-shadow:0px 6px 5px grey;
 }
 
 .title,
@@ -11,7 +12,8 @@
 .date {
   padding-left: 10px;
   padding-right: 10px;
-  font-family: "Times New Roman", Times, serif;
+  font-family: Arial,Helvetica Neue,Helvetica,sans-serif;
+  font-size: 9pt;
   margin: auto;
 }
 
@@ -28,10 +30,10 @@ margin-bottom: 10px;
 
 .title {
   padding-top: 10px;
-  color: #cc0000;
-  font-size: 14pt;
+  color: #CC0000;
+  font-size: 10.5pt;
 }
 
 .author {
-margin-top: 10px;
+margin-top: 25px;
 }
