--- a/src/ArticleList/ArticleImage.module.css
+++ b/src/ArticleList/ArticleImage.module.css
@@ -1,10 +1,10 @@
 img {
 
   border-radius: 50%;
-  height: 67px;
-  width: 110px;
-  float: left;
-  margin: 10px 20px 20px 10px;
-  border:7px solid #cc0000;
+  max-height: 40%;
+  max-width: 50%;
+  display: block;
+  margin: 10px 10px 10px 10px;
+  border:5px solid #cc0000;
   box-shadow:0px 6px 5px grey;
 }
