--- a/src/ArticleList/ArticleImage.module.css
+++ b/src/ArticleList/ArticleImage.module.css
@@ -1,8 +1,8 @@
 img {
 
   border-radius: 50%;
-  max-height: 40%;
-  max-width: 50%;
+  max-height: 70px;
+  max-width: 85px;
   display: block;
   margin: 10px 10px 10px 10px;
   border:5px solid #cc0000;
