--- a/src/ArticleList/ArticleList.module.css
+++ b/src/ArticleList/ArticleList.module.css
@@ -1,5 +1,5 @@
 .article_page {
-max-width: 50%;
+max-width: 80%;
 border-style: solid;
 border-width: thin;
 margin-left: auto;
@@ -14,11 +14,29 @@ margin-bottom: 20px;
 
 .article_list {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(175px, 1fr));
+  grid-template-columns: 1fr;
   list-style-type: none;
   background-color: #A9A9A9;
   padding-left: 20px;
   padding-bottom: 20px;
   margin-top: 10px;
   margin-bottom: 10px;
+}
+
+@media (min-width: 600px) {
+  .article_list {
+    grid-template-columns: 1fr 1fr;
+  }
+  .article_page {
+    max-width: 50%;
+  }
+}
+
+@media (min-width: 1100px) {
+  .article_list {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+  .article_page {
+    max-width: 50%;
+  }
 }
